# PyTschirper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
examples/: Prophet Rev2 Factory Programs ReadMe.txt  demo_diff_layers.py  demo_load_sysex.py  demo_print_patch.py
source/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  PyTschirpEditor.cpp  PyTschirpEditor.h  PythonUtils.cpp  PythonUtils.h  setup.iss
source/examples/: Rev2_Programs_v1.0.syx  demo_access_settings.py  demo_diff_layers.py  demo_live_editing.py  demo_load_sysex.py  demo_print_patch.py  demo_randomize_gated_seq.py  patch_clear_poly_seq.py
